flapivor/tests/m1/hopix/parser/bad/56-constructor-3.hopix
val x = Pair<Pair<Int, String>, String> (Pair<Int, String> (0, "Wou!") : 0)